forcedotcom/src/objects/Process__c.object
<CustomObject>
    <fields>
        <fullName>ListViewName__c</fullName>
        <defaultValue>&quot;eBayInvoicesPaidAndDispatched&quot;</defaultValue>
        <inlineHelpText>Name of the List View used to define the criteria to apply to this process</inlineHelpText>
        <label>Where</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushTopicName__c</fullName>
        <label>Push Topic Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <defaultValue>&quot;Invoice__c&quot;</defaultValue>
        <label>Object</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>Create or Update</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>